--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Current File",
-            "type": "debugpy",
+            "name": "Launch Package",
+            "type": "go",
             "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal"
+            "mode": "auto",
+            "program": "${fileDirname}"
         }
     ]
 }
