--- a/tools.yaml
+++ b/tools.yaml
@@ -4,83 +4,85 @@ tools:
   # - name: awscli2
   #   url: https://github.com/aws/aws-cli/releases
   # - name: azurecli
-  #   url: https://docs.microsoft.com/en-us/cli/azure/release-notes-azure-cli
+  #   url: https://docs.microsoft.com/en-us/cli/azure/install-azure-cli
   # - name: bicepcli
   #   url: https://github.com/Azure/bicep/releases
   # - name: bruno
   #   url: https://github.com/usebruno/bruno/releases
   # - name: clink
-  #   url: https://github.com/mridgers/clink/releases
+  #   url: https://github.com/chrisant996/clink/releases
   # - name: dbeaver
   #   url: https://dbeaver.io/download/
+  # - name: dev
+  #   url: https://github.com/hecrj/Dev/releases
   # - name: dive
   #   url: https://github.com/wagoodman/dive/releases
   # - name: docker-desktop
   #   url: https://docs.docker.com/desktop/release-notes/
   # - name: dotnet6
-  #   url: https://dotnet.microsoft.com/en-us/download/dotnet/6.0
+  #   url: https://dotnet.microsoft.com/download/dotnet/6.0
   # - name: dotnet8
-  #   url: https://dotnet.microsoft.com/en-us/download/dotnet/8.0
+  #   url: https://dotnet.microsoft.com/download/dotnet/8.0
   # - name: drawio
   #   url: https://github.com/jgraph/drawio-desktop/releases
-  # - name: etl2pcapng
-  #   url: https://github.com/microsoft/etl2pcapng/releases
+  # - name: etlp2pcapng
+  #   url: https://github.com/etlp/etlp2pcapng/releases
   # - name: ffmpeg
   #   url: https://ffmpeg.org/download.html
   # - name: gateway
-  #   url: https://github.com/scooterw/portal/releases
+  #   url: https://github.com/kris-nova/kubicorn/releases
   # - name: git-win
   #   url: https://gitforwindows.org/
-  - name: gitlab-cli
-    url: https://gitlab.com/gitlab-org/cli/-/releases.atom
-  - name: gitlab-release-cli
-    url: https://gitlab.com/gitlab-org/release-cli/-/releases
-  - name: go121
-    url: https://golang.org/dl/
-  - name: go122
-    url: https://golang.org/dl/
-  - name: go123
-    url: https://golang.org/dl/
-  - name: helm
-    url: https://github.com/helm/helm/releases
-  - name: inkscape
-    url: https://inkscape.org/release/
-  - name: intelliju2023
-    url: https://www.jetbrains.com/idea/download/other.html
-  - name: intelliju2024
-    url: https://www.jetbrains.com/idea/download/other.html
-  - name: jmeter
-    url: https://jmeter.apache.org/download_jmeter.cgi
-  - name: jq
-    url: https://github.com/stedolan/jq/releases
-  - name: kubectl
-    url: https://github.com/kubernetes/kubernetes/releases
-  - name: make-win
-    url: https://gnuwin32.sourceforge.net/packages/make.htm
-  - name: maven
-    url: https://maven.apache.org/download.cgi
-  - name: miniconda
-    url: https://docs.conda.io/en/latest/miniconda.html
-  - name: node16
-    url: https://nodejs.org/en/download/releases/
-  - name: node18
-    url: https://nodejs.org/en/download/releases/
-  - name: node20
-    url: https://nodejs.org/en/download/releases/
-  - name: node22
-    url: https://nodejs.org/en/download/releases/
-  - name: notepadplusplus
-    url: https://notepad-plus-plus.org/downloads/
-  - name: openshift
-    url: https://github.com/openshift/okd/releases
-  - name: oraclejdk11
-    url: https://www.oracle.com/java/technologies/javase/jdk11-archive-downloads.html
-  - name: oraclejdk17
-    url: https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html
-  - name: oraclejdk21
-    url: https://www.oracle.com/java/technologies/javase/jdk21-archive-downloads.html
-  - name: oraclejdk8
-    url: https://www.oracle.com/java/technologies/javase/javase-jdk8-downloads.html
+  # - name: gitlab-cli
+  #   url: https://github.com/profclems/glab/releases
+  # - name: gitlab-releaser-cli
+  #   url: https://github.com/gitlab-org/cli/releases
+  # - name: gitlab-runner-agent
+  #   url: https://docs.gitlab.com/runner/releases/
+  # - name: golang
+  #   url: https://golang.org/dl/
+  # - name: golang1.22
+  #   url: https://golang.org/dl/
+  # - name: golang1.23
+  #   url: https://golang.org/dl/
+  # - name: helm
+  #   url: https://github.com/helm/helm/releases
+  # - name: inkscape
+  #   url: https://inkscape.org/release/
+  # - name: intellij-idea-ultimate
+  #   url: https://www.jetbrains.com/idea/download/
+  # - name: jmeter
+  #   url: https://jmeter.apache.org/download_jmeter.cgi
+  # - name: jq
+  #   url: https://github.com/stedolan/jq/releases
+  # - name: kubectl
+  #   url: https://kubernetes.io/releases/
+  # - name: make-win
+  #   url: https://gnuwin32.sourceforge.net/packages/make.htm
+  # - name: maven
+  #   url: https://maven.apache.org/download.cgi
+  # - name: miniconda
+  #   url: https://docs.conda.io/en/latest/miniconda.html
+  # - name: node16
+  #   url: https://nodejs.org/en/download/releases/
+  # - name: node18
+  #   url: https://nodejs.org/en/download/releases/
+  # - name: node20
+  #   url: https://nodejs.org/en/download/releases/
+  # - name: node22
+  #   url: https://nodejs.org/en/download/releases/
+  # - name: notepad-plus-plus
+  #   url: https://notepad-plus-plus.org/downloads/
+  # - name: openshift
+  #   url: https://github.com/openshift/okd/releases
+  # - name: oraclejdk11
+  #   url: https://www.oracle.com/java/technologies/javase/jdk11-archive-downloads.html
+  # - name: oraclejdk17
+  #   url: https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html
+  # - name: oraclejdk21
+  #   url: https://www.oracle.com/java/technologies/javase/jdk21-archive-downloads.html
+  # - name: oraclejdk8
+  #   url: https://www.oracle.com/java/technologies/javase/javase8-archive-downloads.html
   - name: powershell
     url: https://github.com/PowerShell/PowerShell/releases
   - name: putty
@@ -94,8 +96,23 @@ tools:
   - name: python39
     url: https://www.python.org/downloads/release/python-390/
   - name: rider
-    url: https://www.jetbrains.com/rider/download/other.html
+    url: https://www.jetbrains.com/rider/download/
   - name: screentogif
-    url: https://github.com/NickeManarin/ScreenToGif/releases
+    url: https://www.screentogif.com/
   - name: task
     url: https://github.com/go-task/task/releases
+  - name: terraform
+    url: https://github.com/hashicorp/terraform/releases
+ 
+  - name: vscode
+    url: https://code.visualstudio.com/updates
+  - name: windows-terminal
+    url: https://github.com/microsoft/terminal/releases
+  - name: winmerge
+    url: https://github.com/WinMerge/winmerge/releases
+  - name: wireshark
+    url: https://www.wireshark.org/download.html
+  - name: yq
+    url: https://github.com/mikefarah/yq/releases
+
+
