added summary to feed and set limit in webcontent lenght

--- a/tools.yaml
+++ b/tools.yaml
@@ -2,7 +2,7 @@ tools:
   - name: 7zip
     url: https://www.7-zip.org/download.html
   - name: awscli2
-    url: https://github.com/aws/aws-cli/releases
+    url: https://raw.githubusercontent.com/aws/aws-cli/refs/heads/v2/CHANGELOG.rst
   - name: azurecli
     url: https://docs.microsoft.com/en-us/cli/azure/install-azure-cli
   - name: bicepcli
@@ -101,7 +101,6 @@ tools:
     url: https://github.com/go-task/task/releases
   - name: terraform
     url: https://github.com/hashicorp/terraform/releases
- 
   - name: vscode
     url: https://code.visualstudio.com/updates
   - name: windows-terminal
@@ -112,5 +111,3 @@ tools:
     url: https://www.wireshark.org/download.html
   - name: yq
     url: https://github.com/mikefarah/yq/releases
-
-
