--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -1,12 +1,9 @@
 name: versionpulse-run
 
 on:
-  push:
-    branches:
-      - main  # Trigger the pipeline on push to the main branch
-  pull_request:
-    branches:
-      - main  # Trigger on PRs to the main branch
+  schedule:
+    - cron: '0 0 */2 * *'  # Runs at midnight UTC every 2 days
+
 
 jobs:
   build:
@@ -40,4 +37,12 @@ jobs:
 
       # Run the main.go file
       - name: Run main.go
-        run: go run main.go
+        env:
+          VP_API_KEY: ${{ secrets.VP_API_KEY }}
+        run: | 
+           go run main.go
+           git config --global user.name "github-actions[bot]"
+           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+           git add docs/feed.json
+           git commit -m "Update feed.json [skip ci]" || echo "No changes to commit"
+           git push
