--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -43,6 +43,6 @@ jobs:
            go run main.go
            git config --global user.name "github-actions[bot]"
            git config --global user.email "github-actions[bot]@users.noreply.github.com"
-           git add docs/feed.json
+           git add feed.json
            git commit -m "Update feed.json [skip ci]" || echo "No changes to commit"
            git push
